fix max width on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
 .app-pic {
   border-radius: 20px;
   margin: auto;
-  max-width: 360px;
+  max-width: 260px;
 }
 
 .icon-link {
